@@ -20,6 +20,7 @@ import org.gradle.api.internal.file.TestFiles
 import org.gradle.internal.jvm.JavaInfo
 import org.gradle.internal.jvm.Jvm
 import org.gradle.launcher.configuration.BuildLayoutResult
+import spock.lang.Issue
 import spock.lang.Specification
 
 import static java.lang.Boolean.parseBoolean
@@ -90,6 +91,20 @@ class DaemonParametersTest extends Specification {
         then:
         parameters.effectiveJvmArgs.containsAll(DaemonParameters.DEFAULT_JVM_8_ARGS)
         !parameters.effectiveJvmArgs.containsAll(DaemonParameters.DEFAULT_JVM_ARGS)
+    }
+
+    @Issue("20611")
+    def "defaults for Java 9+ contain the --add-opens args in the form that can be matched by a user's GRADLE_OPTS"() {
+        when:
+        parameters.applyDefaultsFor(JavaVersion.VERSION_1_9)
+
+        then: "The --add-opens arguments should be in the form that can be matched by user-provided GRADLE_OPTS: --add-opens=x.y/z.a=..."
+        def addOpensArgs = parameters.effectiveJvmArgs.findAll { it.startsWith("--add-opens") }
+        !addOpensArgs.isEmpty()
+        addOpensArgs.every { it.matches("--add-opens=.*?/.*?=ALL-UNNAMED") }
+
+        and: "The required --add-opens args should not contain duplicates"
+        addOpensArgs.toSet().size() == addOpensArgs.size()
     }
 
     def "can configure debug mode"() {
